Fix minor spacing for ceo-img section in about.html

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -128,7 +128,7 @@
    ============================================ */
 .img-pos {
     text-align: center;
-    padding-top: 75px;
+    padding-top: 125px;
 }
 
 .autobio {
